# PRACTICA_7_my_homeork

./: CMakeLists.txt  export.h  main.cpp
